[project]
name = "tennis_system"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "ultralytics>=8.2.50",
    "lap==0.4.0",
    "lapx>=0.5.9.post1",
    "numpy>=1.24.4",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
